GNOME Bugzilla – Bug 666154
[0.11] Python - query_caps fails to accept 'None'
Last modified: 2011-12-14 12:15:56 UTC
Trying to set None on .query_caps, but it seems to fail: origin = src_pad.query_caps(None)
+ Trace 229271
return info.invoke(*args, **kwargs)
commit 33a566bcc5003bfa7aea9ccbd9003ec9c42e9a1a Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Wed Dec 14 12:13:36 2011 +0000 pad: allow NULL as filter caps argument with query_caps() https://bugzilla.gnome.org/show_bug.cgi?id=666154