pad: allow NULL as filter caps argument with query_caps()

https://bugzilla.gnome.org/show_bug.cgi?id=666154